# js-semver

./: .gitignore  Cargo.toml  NOTICE.md  README.md  mise.toml
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yaml
.github/workflows/: ci.yaml  ci.yml  deploy-playground.yaml  release.yaml
benches/: parse.rs
playground/: .gitignore  deno.jsonc  index.html  vite.config.ts
playground/plugins/: og-image.ts
playground/src/: 404.tsx  app.tsx  input.tsx  issues.ts  main.tsx  prerender.tsx  query.ts  result-card.tsx  styles.css  vite-env.d.ts
playground/src/components/: compat-card.tsx  input.tsx  result-card.tsx  status-detail.tsx
playground/src/utils/: commit.ts  issues.ts  js-semver.ts  js-semver_test.ts  query.ts  result.tsx
playground/wasm/: Cargo.toml
playground/wasm/src/: lib.rs
src/: error.rs  identifier.rs  lib.rs  number.rs  range.rs  serde.rs  version.rs
tests/: compat.rs  range.rs  real_world.rs  version.rs
