[package]
name = "js-semver"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Parser and evaluator for semantic versioning in JavaScript, including Node.js and Deno"
license = "MIT-0"
repository = "https://github.com/ryuapp/js-semver"
keywords = ["semver", "nodejs", "deno"]
categories = ["no-std"]
include = [
    "src/**/*",
    "tests/**/*",
    "LICENSE",
    "README.md",
]

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
serde = { package = "serde_core", version = "^1.0.220", optional = true }

[dev-dependencies]
serde_json = "1"

[lints.clippy]
# Enable all lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Panic prevention (deny in production code)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_in_result = "deny"

exit = "deny"
wildcard_imports = "deny"
