[package]
name = "js-semver-website-wasm"
version = "0.1.0"
edition = "2024"
description = "Wasm bindings for the js-semver playground"
license = "MIT-0"
repository = "https://github.com/ryuapp/js-semver"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
js-semver = { path = "../.." }
serde = { version = "^1.0.220", features = ["derive"] }
serde_json = "^1"
wasm-bindgen = "^0.2.118"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
